<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingHorizontal="@dimen/default_margin"
    android:background="@color/layout_background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_bmi"
        android:layout_margin="@dimen/text_magin"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/corner_card_radius"
        android:layout_marginBottom="@dimen/default_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/weight_text"
                android:layout_margin="@dimen/text_magin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_add"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/edit_text_size"
                    android:layout_margin="@dimen/text_magin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/weight_kg"
                    android:textSize="@dimen/text_size"
                    android:layout_margin="@dimen/text_magin"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/card_radius"
        android:layout_marginBottom="@dimen/default_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/height_text"
                android:layout_margin="@dimen/text_magin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_add"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/edit_text_size"
                    android:layout_margin="@dimen/text_magin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/height_cm"
                    android:textSize="@dimen/text_size"
                    android:layout_margin="@dimen/text_magin"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_background"
        android:text="@string/button_text"
        android:layout_marginBottom="@dimen/default_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/text_magin"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/card_radius"
        android:layout_margin="@dimen/default_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/result_text_size" />
            <TextView
                android:id="@+id/estado_salud"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/healthy_text_size"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>